--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-        <h1>hello wolrd!</h1>
+        <h1>Hello wolrd!</h1>
         <p>this is my first web page.</p>
     </body>
 </html>
