--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="author" content="Mathias Schaltz"
-        <meta name="description" content="this is my first time making a website using vs-code, and learning how to use html and css."
-        <link rel="stylesheet" href="style.css">
-
-        <title>Portofolio</title>
-        <link rel="icon" href="Skærmbillede 2022-08-09 123714.png"
-        type="image/x-icon">
-    </head>
-
-    <body>
-        <h1>Hello wolrd!</h1>
-        <p>this is my first web page.</p>
-    </body>
+<body>
+<!-- Hero Section-->
+<section id="hero">
+    <div class="hero container">
+        <div>
+            <h1>hej mit navn er Mathias Schaltz Hansen</h1>
+            <a href="#" type="button" class="cta">portfolio</a>
+        </div>
+    </div>
+</section>
+<!--end hero section-->
+</body>
 </html>
