--- a/index.html
+++ b/index.html
@@ -12,15 +12,6 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-            </div>
-        </nav>
-    </header>
 
     <div class="navigationbar">
         <a href="#home" style="font-weight:bold">Hjem</a>
@@ -28,110 +19,106 @@
         <a href="#contact" style="font-weight:bold">Kontakt mig</a>
     </div>
 
-    <section id="home">
-        <h1 class="home-title">
-            Hej<br />
-            Mit navn er<br />
-            Mathias Schaltz Hansen
-        </h1>
-        <a href="/aboutme.html">
-            <button>portfolio</button>
-        </a>
-    </section>
+    <div id="fullpage">
 
-    <section id="slideshow">
-        <div class="slider-wrapper">
-            <div class="slider">
 
-                <a href="https://github.com/SaltedFishy03/      ConCalc">
-                    <img id="slide-1" src="imgs/concalc.png">
+        <div class="section" id="home">
+            <h1 class="home-title">
+                Hej<br />
+                Mit navn er<br />
+                Mathias Schaltz Hansen
+            </h1>
+            <a href="/aboutme.html">
+                <button>portfolio</button>
+            </a>
+        </div>
+
+
+        <div class="section" id="slideshow">
+            <div class="slide">
+                <h1>ConCalc</h1>
+                <h2></h2>
+                <a href="https://github.com/SaltedFishy03/ConCalc">
+                    <img src="imgs/concalc.png">
                 </a>
+            </div>
 
-
-
-                <a href="https://github.com/SaltedFishy03/Difference-mellem-2-tal.git">
-                    <img id="slide-2" src="imgs/difference-taeller.png">
+            <div class="slide">
+                <h1></h1>
+                <h2></h2>
+                <a href="github.com/SaltedFishy03/Difference-mellem-2-tal.git">
+                    <img src="imgs/difference-taeller.png">
                 </a>
+            </div>
 
-
-
-                <a href="https://github.com/SaltedFishy03/lige-eller-ulige-tal-.git">
-                    <img id="slide-3" src="imgs/er-tal-lige-eller-ulige.png">
+            <div class="slide">
+                <h1></h1>
+                <h2></h2>
+                <a href="github.com/SaltedFishy03/lige-eller-ulige-tal-.git"> <img
+                        src="imgs/er-tal-lige-eller-ulige.png" alt="">
                 </a>
             </div>
         </div>
 
 
-        <div class="slider-nav">
-            <a href="#slide-1"></a>
-            <a href="#slide-2"></a>
-            <a href="#slide-3"></a>
-        </div>
+        <div class="section" id="about-me">
+            <div class="grid-container">
+                <img class="about-me-img" src="/imgs/about-me.jpg">
+                <div class="about-me-text">
+                    <h1 class="about-me-Title">Om mig</h1>
+                    <p class="standard-text">
+                        Mit navn er Matihas Schaltz Hansen. En paasioneret ung fyr
+                        som nemt for blod på tanden efter ny læring.
+                        <br><br>
+                        Jeg brander for
+                        at udvilke mine kompatancer inde for programmering samt få
+                        en breder forståelse inde for faget.
+                        <br><br>
+                        Lige nu arbejder jeg med HTML og CSS, hvor senere
+                        vil jeg også gerne arbejde med C# samt Python.
+                    </p>
 
-        </div>
-    </section>
-    <section id="about-me">
-        <div class="grid-container">
-            <img class="about-me-img" src="/imgs/about-me.jpg">
-            <div class="about-me-text">
-                <h1 class="about-me-Title">Om mig</h1>
-                <p class="standard-text">
-                    Mit navn er Matihas Schaltz Hansen. En paasioneret ung fyr
-                    som nemt for blod på tanden efter ny læring.
-                    <br><br>
-                    Jeg brander for
-                    at udvilke mine kompatancer inde for programmering samt få
-                    en breder forståelse inde for faget.
-                    <br><br>
-                    Lige nu arbejder jeg med HTML og CSS, hvor senere
-                    vil jeg også gerne arbejde med C# samt Python.
-                </p>
-
+                </div>
             </div>
         </div>
-    </section>
-
-    <section id="contact">
-        <ul class="contact-list">
-            <h1 class="contact-title">Kontakt</h1>
-
-            <li>
-                <a class="contact-box"
-                    href="https://mail.google.com/mail/?view=cm&fs=1&to=seekerbrutus@gmail.com&body=Contacted Through Website"
-                    target="_blank">
-                    <img class="contact-img" src="imgs/mail-99218_960_720.png">
-                    <p class="contact-text">Du kan kontakte mig på min mail</p>
-                </a>
-            </li>
-            <li>
-                <a class="contact-box" href="https://github.com/SaltedFishy03" target="_blank">
-                    <img class="contact-img" src="imgs/github-6980894__340-removebg-preview (2).png">
-                    <p class="contact-text">Check min profil ud på Github</p>
-                </a>
-            </li>
-            <li>
-                <a class="contact-box" href="https://www.linkedin.com/in/mathias-hansen-564172249/" target="_blank">
-                    <img class="contact-img" src="imgs/LinkedIn_logo_initials-removebg-preview.png">
-                    <p class="contact-text">Se mere om mig på LinkedIn</p>
-                </a>
-            </li>
-
-        </ul>
 
 
-    </section>
+        <section id="contact">
+            <ul class="contact-list">
+                <h1 class="contact-title">Kontakt</h1>
+                <li>
+                    <a class="contact-box"
+                        href="https://mail.google.com/mail/?view=cm&fs=1&to=seekerbrutus@gmail.com&body=Contacted Through Website"
+                        target="_blank">
+                        <img class="contact-img" src="imgs/mail-99218_960_720.png">
+                        <p class="contact-text">Du kan kontakte mig på min mail</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="contact-box" href="https://github.com/SaltedFishy03" target="_blank">
+                        <img class="contact-img" src="imgs/github-6980894__340-removebg-preview (2).png">
+                        <p class="contact-text">Check min profil ud på Github</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="contact-box" href="https://www.linkedin.com/in/mathias-hansen-564172249/" target="_blank">
+                        <img class="contact-img" src="imgs/LinkedIn_logo_initials-removebg-preview.png">
+                        <p class="contact-text">Se mere om mig på LinkedIn</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
 
-    <footer class="footer">
+        <footer class="footer">
 
-    </footer>
-    <script>
-        new fullpage('#fullpage', {
-            //options here
-            autoScrolling: true,
-            scrollHorizontally: true
-        });
-    </script>
-    <script type="text/javascript" src="fullpage.js"></script>
+        </footer>
+        <script type="text/javascript" src="fullpage.min.js"></script>
+<script type="text/javascript">
+	var myFullpage = new fullpage('#fullpage', {
+		
+	});
+</script>
+    </div>
 </body>
 
 </html>
