færdig hjemmeside (forløbig)

--- a/projekter.html
+++ b/projekter.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,10 +20,16 @@
     </div>
 
   <section id="projekter">
-    <ul class="projekt-box">
+    <ul class="all-projekts">
         <h1 class="projekt-title">Projekter</h1>
         <li>
-            <a class="projekt-box" href="https://github.com/SaltedFishy03/ConCalc.git" target="_blank"><img class="projekt-img" src="/imgs/concalc.png"> <p>Se min lommeregner jeg har lavet i C#</p></a>
+            <a class="projekt-box" href="https://github.com/SaltedFishy03/ConCalc.git" target="_blank"><img class="projekt-img" src="/imgs/concalc.png"> <p class="projekt-text">Det er en lommeregner jeg har lavet</p></a>
+        </li>
+        <li>
+            <a class="projekt-box" href="https://github.com/SaltedFishy03/lige-eller-ulige-tal-.git" target="_blank"><img class="projekt-img" src="imgs/lige-og-ulige-tal.png"> <p class="projekt-text">denne tjekker et tal er lige eller ulige </p></a>
+        </li>
+        <li>
+            <a class="projekt-box" href="https://github.com/SaltedFishy03/Difference-mellem-2-tal.git" target="_blank"><img class="projekt-img" src="imgs/difference tæller.png"> <p class="projekt-text">Denne kan tælle diffrence mellem 2 tal </p></a>
         </li>
     </ul>
   </section>
