--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                <div class="standard-text">
                 <p>
-                    Mit navn er Matihas Schaltz Hansen. En paasioneret ung fyr
+                    Mit navn er Matihas Schaltz Hansen. En pasioneret ung fyr
                     som nemt for blod på tanden efter ny læring.
                     <br><br>
                     Jeg brander for
