--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     som nemt for blod på tanden efter ny læring.
                     <br><br>
                     Jeg brander for
-                    at udvilke mine kompatancer inde for programmering samt få
-                    en breder forståelse inde for faget.
+                    at udvilke mine kompatencer inden for programmering samt få
+                    en bredere forståelse inde for faget.
                     <br><br>
                     Lige nu arbejder jeg med HTML og CSS, hvor senere
                     vil jeg også gerne arbejde med C# samt Python.
