--- a/projekter.html
+++ b/projekter.html
@@ -26,7 +26,7 @@
             <a class="projekt-box" href="https://github.com/SaltedFishy03/ConCalc.git" target="_blank"><img class="projekt-img" src="/imgs/concalc.png"> <p class="projekt-text">Det er en lommeregner jeg har lavet</p></a>
         </li>
         <li>
-            <a class="projekt-box" href="https://github.com/SaltedFishy03/lige-eller-ulige-tal-.git" target="_blank"><img class="projekt-img" src="imgs/lige-og-ulige-tal.png"> <p class="projekt-text">denne tjekker et tal er lige eller ulige </p></a>
+            <a class="projekt-box" href="https://github.com/SaltedFishy03/WPF-Projects.git" target="_blank"><img class="projekt-img" src="imgs/lige-og-ulige-tal.png"> <p class="projekt-text">Her er en masse forskellige WPF projekter jeg har lavet</p></a>
         </li>
         <li>
             <a class="projekt-box" href="https://github.com/SaltedFishy03/Difference-mellem-2-tal.git" target="_blank"><img class="projekt-img" src="imgs/difference tæller.png"> <p class="projekt-text">Denne kan tælle diffrence mellem 2 tal </p></a>
