--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h1 class="contact-title">Kontakt</h1>
             <li>
                 <a class="contact-box"
-                    href="https://mail.google.com/mail/?view=cm&fs=1&to=seekerbrutus@gmail.com&body=Contacted Through Website"
+                    href="https://mail.google.com/mail/?view=cm&fs=1&to=schaltz@gmail.com&body=Contacted Through Website"
                     target="_blank">
                     <img class="contact-img" src="imgs/mail-99218_960_720.png">
                     <p class="contact-text">Du kan kontakte mig på min mail</p>
